--- a/modules/benefit/locale/fr_FR.po
+++ b/modules/benefit/locale/fr_FR.po
@@ -2,17 +2,233 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:benefit-extra_data:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:benefit-extra_data:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:benefit-loss.description:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:benefit-loss.description:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:benefit.event.description-loss.description:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:benefit.event.description-loss.description:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:benefit.event.description:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:benefit.event.description:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:benefit.loss.description-document.description:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:benefit.loss.description-document.description:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:benefit.loss.description-extra_data:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:benefit.loss.description-extra_data:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:benefit.loss.description:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:benefit.loss.description:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:benefit.reserve.rule:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:benefit.reserve.rule:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:benefit.reserve.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
+
+msgctxt "error:benefit.rule.stage:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:benefit.rule.stage:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:benefit.rule:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:benefit.rule:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
 
 msgctxt "error:benefit.rule:"
 msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
 msgctxt "error:benefit:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:benefit:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:benefit:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
+
+msgctxt "error:option.description-benefit:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:option.description-benefit:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
 
 msgctxt "field:benefit,beneficiary_kind:"
 msgid "Beneficiary Kind"
@@ -46,21 +262,9 @@ msgctxt "field:benefit,currency_digits:"
 msgid "Currency Digits"
 msgstr "Nbre de chiffres après la virgule"
 
-msgctxt "field:benefit,deductible_rules:"
-msgid "Deductible Rules"
-msgstr "Franchises"
-
 msgctxt "field:benefit,description:"
 msgid "Description"
 msgstr "Description"
-
-msgctxt "field:benefit,document_rules:"
-msgid "Document Rules"
-msgstr "Documents"
-
-msgctxt "field:benefit,eligibility_rules:"
-msgid "Eligibility Rules"
-msgstr "Règles d'Eligibilité"
 
 msgctxt "field:benefit,end_date:"
 msgid "End Date"
@@ -86,17 +290,9 @@ msgctxt "field:benefit,loss_descs:"
 msgid "Loss Descriptions"
 msgstr "Types de Préjudice Couverts"
 
-msgctxt "field:benefit,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:benefit,name:"
 msgid "Name"
 msgstr "Nom"
-
-msgctxt "field:benefit,premium_rules:"
-msgid "Premium Rules"
-msgstr "Règles de Cotisation"
 
 msgctxt "field:benefit,rec_name:"
 msgid "Name"
@@ -109,10 +305,6 @@ msgstr "Règle de Provisions"
 msgctxt "field:benefit,start_date:"
 msgid "Start Date"
 msgstr "Date de Début"
-
-msgctxt "field:benefit,sub_document_rules:"
-msgid "Sub Document Rules"
-msgstr "Documents Risques Couverts"
 
 msgctxt "field:benefit,summary:"
 msgid "Summary"
@@ -258,10 +450,6 @@ msgctxt "field:benefit.event.description,loss_descs:"
 msgid "Loss Descriptions"
 msgstr "Types de Préjudice Couverts"
 
-msgctxt "field:benefit.event.description,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:benefit.event.description,name:"
 msgid "Name"
 msgstr "Nom"
@@ -361,10 +549,6 @@ msgstr "ID"
 msgctxt "field:benefit.loss.description,item_kind:"
 msgid "Kind"
 msgstr "Type"
-
-msgctxt "field:benefit.loss.description,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:benefit.loss.description,name:"
 msgid "Name"
@@ -498,10 +682,6 @@ msgctxt "field:benefit.reserve.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:benefit.reserve.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
-
 msgctxt "field:benefit.reserve.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -617,10 +797,6 @@ msgstr "Durée max par Indemnisation"
 msgctxt "field:benefit.rule,max_duration_per_indemnification_unit:"
 msgid "Unit"
 msgstr "Unité"
-
-msgctxt "field:benefit.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:benefit.rule,offered:"
 msgid "Offered"
@@ -749,10 +925,6 @@ msgstr "Unité de Calcul"
 msgctxt "field:benefit.rule.stage,limited_duration:"
 msgid "Limited Duration"
 msgstr "Durée Limitée"
-
-msgctxt "field:benefit.rule.stage,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre l'arbre"
 
 msgctxt "field:benefit.rule.stage,rec_name:"
 msgid "Name"
@@ -1150,14 +1322,6 @@ msgctxt "selection:extra_data,kind:"
 msgid "Benefit"
 msgstr "Prestation"
 
-msgctxt "selection:offered.deductible.rule,offered:"
-msgid "Benefit"
-msgstr "Prestation"
-
-msgctxt "selection:offered.eligibility.rule,offered:"
-msgid "Benefit"
-msgstr "Prestation"
-
 msgctxt "view:benefit.event.description:"
 msgid "Event Descriptionriptor"
 msgstr "Descripteur d'Evénement"
@@ -1199,8 +1363,8 @@ msgid "Benefit"
 msgstr "Prestation"
 
 msgctxt "view:benefit:"
-msgid "Deductible"
-msgstr "Franchise"
+msgid "Benefits"
+msgstr "Prestations"
 
 msgctxt "view:benefit:"
 msgid "Reserve"
