--- a/modules/contract_loan_invoice/locale/fr_FR.po
+++ b/modules/contract_loan_invoice/locale/fr_FR.po
@@ -2,6 +2,42 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:contract.premium.amount.per_period:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.premium.amount.per_period:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:contract.premium.amount:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:contract.premium.amount:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
 msgctxt "error:contract:"
 msgid "No premium found for this contract !"
 msgstr "Pas de prime trouvé pour ce contrat"
@@ -82,6 +118,10 @@ msgctxt "field:contract.premium.amount,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
 
+msgctxt "field:contract.premium.amount,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
 msgctxt "field:contract.premium.amount,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -126,6 +166,10 @@ msgctxt "field:contract.premium.amount,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
+msgctxt "field:contract.premium.amount,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt "field:contract.premium.amount.per_period,amount:"
 msgid "Amount"
 msgstr "Montant"
@@ -136,6 +180,10 @@ msgstr "Contrat"
 
 msgctxt "field:contract.premium.amount.per_period,create_date:"
 msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:contract.premium.amount.per_period,create_date_:"
+msgid "Creation date"
 msgstr "Date de Création"
 
 msgctxt "field:contract.premium.amount.per_period,create_uid:"
@@ -185,6 +233,10 @@ msgstr "Date de mise à jour"
 msgctxt "field:contract.premium.amount.per_period,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
+
+msgctxt "field:contract.premium.amount.per_period,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:loan,average_premium_rate:"
 msgid "Average Premium Rate"
@@ -346,10 +398,6 @@ msgctxt "field:offered.product,average_loan_premium_rule:"
 msgid "Average Loan Premium Rule"
 msgstr "Règle de taux moyen prêt"
 
-msgctxt "field:offered.product.premium_dates,every_loan_payment:"
-msgid "Calculate each payment"
-msgstr "Calculer à chaque échéance"
-
 msgctxt "model:contract.premium.amount,name:"
 msgid "Premium Amount"
 msgstr "Montant de la prime"
@@ -425,6 +473,10 @@ msgstr "Ne pas prendre en compte les frais"
 msgctxt "selection:offered.option.description.premium_rule,premium_base:"
 msgid "Loan"
 msgstr "Prêt"
+
+msgctxt "selection:offered.product.premium_date,type_:"
+msgid "On Each Loan Payment"
+msgstr "A chaque échéance"
 
 msgctxt "view:contract.premium.amount.per_period:"
 msgid "Amount"
