--- a/modules/endorsement_life/locale/fr_FR.po
+++ b/modules/endorsement_life/locale/fr_FR.po
@@ -90,6 +90,10 @@ msgctxt "field:endorsement.contract.beneficiary,definition:"
 msgid "Definition"
 msgstr "Définition"
 
+msgctxt "field:endorsement.contract.beneficiary,func_key:"
+msgid "Functional Key"
+msgstr "Clé fonctionnelle"
+
 msgctxt "field:endorsement.contract.beneficiary,id:"
 msgid "ID"
 msgstr "ID"
@@ -291,6 +295,10 @@ msgctxt "view:endorsement.contract.beneficiary:"
 msgid "Endorsement Beneficiary"
 msgstr "Bénéficiaire"
 
+msgctxt "wizard_button:endorsement.start,manage_beneficiaries,end:"
+msgid "Cancel"
+msgstr "Annuler"
+
 msgctxt ""
 "wizard_button:endorsement.start,manage_beneficiaries,manage_beneficiaries_next:"
 msgid "Next"
@@ -301,6 +309,7 @@ msgctxt ""
 msgid "Previous"
 msgstr "Précédent"
 
-msgctxt "wizard_button:endorsement.start,manage_beneficiaries,suspend:"
+msgctxt ""
+"wizard_button:endorsement.start,manage_beneficiaries,manage_beneficiaries_suspend:"
 msgid "Suspend"
 msgstr "Suspendre"
