--- a/modules/premium/locale/fr_FR.po
+++ b/modules/premium/locale/fr_FR.po
@@ -132,13 +132,13 @@ msgstr ""
 "partagent la même clé fonctionnelle :\n"
 "\"%s\"."
 
-msgctxt "error:offered.product.premium_dates:"
+msgctxt "error:offered.product.premium_date:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
 msgstr ""
 "Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
 "\"%s\"."
 
-msgctxt "error:offered.product.premium_dates:"
+msgctxt "error:offered.product.premium_date:"
 msgid ""
 "Cannot import : the following objects:\n"
 "%s\n"
@@ -233,6 +233,10 @@ msgstr "Identifiant XML"
 msgctxt "field:contract,fees:"
 msgid "Fees"
 msgstr "Frais"
+
+msgctxt "field:contract,show_premium:"
+msgid "Show Premium"
+msgstr "Visualiser les primes"
 
 msgctxt "field:contract.fee,accept_fee:"
 msgid "Accept Fee"
@@ -510,53 +514,49 @@ msgctxt "field:offered.product-account.fee,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
-msgctxt "field:offered.product.premium_dates,create_date:"
+msgctxt "field:offered.product.premium_date,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
 
-msgctxt "field:offered.product.premium_dates,create_date_:"
+msgctxt "field:offered.product.premium_date,create_date_:"
 msgid "Creation date"
 msgstr "Date de Création"
 
-msgctxt "field:offered.product.premium_dates,create_uid:"
+msgctxt "field:offered.product.premium_date,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:offered.product.premium_dates,id:"
+msgctxt "field:offered.product.premium_date,custom_date:"
+msgid "Custom Sync Date"
+msgstr "Date de synchro personnalisée"
+
+msgctxt "field:offered.product.premium_date,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.product.premium_dates,product:"
+msgctxt "field:offered.product.premium_date,product:"
 msgid "Product"
 msgstr "Produit"
 
-msgctxt "field:offered.product.premium_dates,rec_name:"
+msgctxt "field:offered.product.premium_date,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-msgctxt "field:offered.product.premium_dates,write_date:"
+msgctxt "field:offered.product.premium_date,type_:"
+msgid "Date rule"
+msgstr "Règle de date"
+
+msgctxt "field:offered.product.premium_date,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-msgctxt "field:offered.product.premium_dates,write_uid:"
+msgctxt "field:offered.product.premium_date,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-msgctxt "field:offered.product.premium_dates,xml_id:"
+msgctxt "field:offered.product.premium_date,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
-
-msgctxt "field:offered.product.premium_dates,yearly_custom_date:"
-msgid "Yearly, this day"
-msgstr ""
-
-msgctxt "field:offered.product.premium_dates,yearly_on_new_eve:"
-msgid "Every first day of the year"
-msgstr ""
-
-msgctxt "field:offered.product.premium_dates,yearly_on_start_date:"
-msgid "Yearly from the contract start"
-msgstr ""
 
 msgctxt "help:account.fee,amount:"
 msgid "In company's currency"
@@ -598,9 +598,9 @@ msgctxt "model:offered.product-account.fee,name:"
 msgid "Product Fee Relation"
 msgstr "Relation Produit - Frais"
 
-msgctxt "model:offered.product.premium_dates,name:"
+msgctxt "model:offered.product.premium_date,name:"
 msgid "Product Premium Dates"
-msgstr ""
+msgstr "Dates de calcul des primes"
 
 msgctxt "model:rule_engine.rule_parameter,string:premium_amount"
 msgid "Premium Amount"
@@ -690,6 +690,14 @@ msgctxt "selection:offered.option.description.premium_rule,premium_base:"
 msgid "Option"
 msgstr "Option"
 
+msgctxt "selection:offered.product.premium_date,type_:"
+msgid "Yearly, at this date"
+msgstr "Annuellement, à cette date"
+
+msgctxt "selection:offered.product.premium_date,type_:"
+msgid "Yearly, from the contract start date"
+msgstr "Annuellement à l'anniversaire du contrat"
+
 msgctxt "selection:rule_engine,type_:"
 msgid "Premium"
 msgstr "Prime"
@@ -738,6 +746,10 @@ msgctxt "view:contract.premium:"
 msgid "Premium Rules"
 msgstr "Règles de Cotisation"
 
+msgctxt "view:contract:"
+msgid "Display Premium"
+msgstr "Afficher les primes"
+
 msgctxt "view:offered.option.description.premium_rule:"
 msgid "Premium Rule"
 msgstr "Règle de cotisation"
@@ -750,9 +762,9 @@ msgctxt "view:offered.option.description:"
 msgid "Premium Data"
 msgstr "Cotisation"
 
-msgctxt "view:offered.product.premium_dates:"
-msgid "Pricing Date Configuration"
-msgstr ""
+msgctxt "view:offered.product.premium_date:"
+msgid "Premium Calculation Dates"
+msgstr "Dates de calcul des primes"
 
 msgctxt "view:offered.product:"
 msgid "Premium Data"
