--- a/modules/account_cog/locale/fr_FR.po
+++ b/modules/account_cog/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -157,6 +157,24 @@ msgstr ""
 "\"%s\"."
 
 msgctxt "error:account.journal:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:account.move.line:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:account.move.line:"
 msgid ""
 "Cannot import : the following objects:\n"
 "%s\n"
@@ -504,9 +522,17 @@ msgctxt "field:account.move.line,reconciliation_lines:"
 msgid "Reconciliation Lines"
 msgstr "Lignes de lettrage"
 
+msgctxt "field:account.move.line,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt "field:account.open_third_party_balance.start,account:"
 msgid "Account"
 msgstr "Compte"
+
+msgctxt "field:account.open_third_party_balance.start,at_date:"
+msgid "At date"
+msgstr "A la date"
 
 msgctxt ""
 "field:account.open_third_party_balance.start,third_party_balance_option:"
