--- a/modules/account_invoice_cog/locale/fr_FR.po
+++ b/modules/account_invoice_cog/locale/fr_FR.po
@@ -2,6 +2,32 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:account.invoice:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:account.invoice:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "field:account.invoice,icon:"
+msgid "Icon"
+msgstr "Icône"
+
+msgctxt "field:account.invoice,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt "field:ir.test_case,fiscal_year_number:"
 msgid "Number of Fiscal Years to create"
 msgstr "Nombre d'années fiscales à créer"
@@ -9,3 +35,7 @@ msgstr "Nombre d'années fiscales à créer"
 msgctxt "field:ir.test_case,test_cases:"
 msgid "Test Cases"
 msgstr "Jeux de Test"
+
+msgctxt "model:res.group,name:group_invoice_read"
+msgid "Invoice consultation"
+msgstr "Consultation des quittances"
