--- a/modules/debug/locale/fr_FR.po
+++ b/modules/debug/locale/fr_FR.po
@@ -1,4 +1,4 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -37,6 +37,10 @@ msgstr "id à calculer"
 msgctxt "field:ir.model.debug.model_info,model_name:"
 msgid "Model Name"
 msgstr "Nom du modèle"
+
+msgctxt "field:ir.model.debug.model_info,must_raise_exception:"
+msgid "Must Raise Exception"
+msgstr "Doit lever une exception"
 
 msgctxt "field:ir.model.debug.model_info,to_evaluate:"
 msgid "To Evaluate"
